[package]
name = "problem"
version = "0.1.0"
description = "A procedural macro for deriving Into<Problem>"
authors = ["Mykyta Holubakha <hilobakho@gmail.com>"]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
serde_derive = "1.0.80"
serde = "1.0.80"
rocket = { version = "0.4.0-rc.1", optional = true }

[features]
rocket_responder = ["rocket"]
